--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,12 @@
 html {
   background: #e4e6e8;
-  /* height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center; */
+  overflow: hidden;
 }
 
 body {
-  /* background: #dfe7ef; */
   font-family: "Bitter", serif;
   height: 100vh;
-  /* display: flex;
-  align-items: center; */
-  /* border: 1px solid rgb(55, 255, 0); */
-  /* margin-top: 50%; */
-  /* margin-top: 50%;
-  margin-bottom: 100%; */
+  overflow: hidden;
 }
 
 * {
